[package]
name = "bmp390"
version = "0.1.0"
edition = "2021"
authors = ["Adam Sasine <adam.sasine@gmail.com>"]
description = "Asynchronous driver for the BMP390 pressure sensor"
homepage = "https://github.com/asasine/bmp390"
repository = "https://github.com/asasine/bmp390"
license = "MIT"
keywords = ["embedded-hal", "async", "pressure", "sensor"]
categories = ["aerospace", "embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal-async = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0", default-features = false, features = [
    "eh1",
    "embedded-hal-async",
] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }

[patch.crates-io]
# Until https://github.com/dbrgn/embedded-hal-mock/pull/119 is merged (async I2C mock)
embedded-hal-mock = { git = "https://github.com/asasine/embedded-hal-mock", branch = "feat/asasine/async-i2c" }
