[package]
name = "bmp390"
version = "0.1.1"
edition = "2021"
authors = ["Adam Sasine <adam.sasine@gmail.com>"]
description = "Asynchronous driver for the BMP390 pressure sensor"
homepage = "https://github.com/asasine/bmp390"
repository = "https://github.com/asasine/bmp390"
license = "MIT"
keywords = ["embedded-hal", "async", "pressure", "sensor"]
categories = ["aerospace", "embedded", "hardware-support", "no-std"]

[features]
embassy-time = ["dep:embassy-time"]

[dependencies]
embedded-hal-async = "1.0.0"
embassy-time = { version = "0.3.0", optional = true }
defmt = "0.3.8"
libm = "0.2.8"
uom = { version = "0.36.0", default-features = false, features = ["f32", "si", "autoconvert"] }

[dev-dependencies]
defmt = { version = "0.3.8", features = [ "unstable-test" ] }
embedded-hal-mock = { version = "0.10.0", default-features = false, features = [
    "eh1",
    "embedded-hal-async",
] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }

[patch.crates-io]
# Until https://github.com/dbrgn/embedded-hal-mock/pull/119 is merged (async I2C mock)
embedded-hal-mock = { git = "https://github.com/asasine/embedded-hal-mock", branch = "feat/asasine/async-i2c" }
